--- a/chatbot1-Copy1.ipynb
+++ b/chatbot1-Copy1.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "file_path = '/home/jovyan/test/menu.xls' \n",
+    "file_path = '/home/jovyan/mydata/menu.xls' \n",
     "xls = pd.ExcelFile(file_path)\n",
     "\n",
     "formatted_data = []\n",
